# STM_simulator

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  build.ninja  cmake_install.cmake  game_module.c  game_module.h  game_states.c  game_states.h  intro.c  magnetic_data.c  outro.h  spinChainCam.c  stm_simulator.c  stm_simulator_stand_alone.c  text_module.c
.cmake/api/v1/reply/: cache-v2-bf2788017277e8c820fd.json  cache-v2-e10ff97328e52b763634.json  cache-v2-e533fe2b046662d6cc3e.json  cmakeFiles-v1-4a017acb1b89e97ad1ea.json  cmakeFiles-v1-99b988cdf1908e3a47bd.json  cmakeFiles-v1-dd166d6423cc1d7992ca.json  codemodel-v2-2b15d7b2afd6f3caa2b0.json  codemodel-v2-bbfc9d319eae0e9e029e.json  codemodel-v2-dbe5b3bc4fd5dc35ac28.json  codemodel-v2-fbad7acb2b3d96af295e.json  index-2025-04-23T13-33-35-0519.json  index-2025-04-23T13-37-38-0255.json  index-2025-04-23T13-56-43-0139.json  index-2025-04-26T19-29-09-0137.json  target-stm_simulator-Debug-0ef03f4059c545db116c.json  target-stm_simulator-Debug-39a6b3df5e4e66efddcb.json  target-stm_simulator-Debug-7c87463fe2302dcaa234.json  target-stm_simulator-Debug-9bafe2c36ca6656a0819.json
Modules/include/: stm.h
Modules/include/Modules/: magnetic_data.h  spin_chain.h  stm.h
Modules/src/: game_modules.c  magnetic_data.c  spin_chain.c  stm.c
Scenes/include/: game.h
Scenes/include/Scenes/: game.h  intro.h  outro.h  scene_states.h
Scenes/src/: game.c  intro.c  outro.c  scene_states.c
docs/: stm_simulator.data  stm_simulator.html  stm_simulator.js  stm_simulator.wasm
include/: the_game.h
include/Modules/: game_modules.h  magnetic_data.h  spin_chain.h  stm.h  text_module.h
include/Scenes/: background_color.h  game.h  game_play.h  intro.h  outro.h  scene_states.h
include/logger/: logger.h
src/: main.c  the_game.c
src/Modules/: game_modules.c  magnetic_data.c  spin_chain.c  stm.c  text_module.c
src/Scenes/: game.c  game_play.c  intro.c  outro.c  scene_states.c
